feat(history): order entities by startDate
related to #5209